01-lab-setup/02-tier2-setup/resources/hubble/httproutes/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-route
  namespace: kube-system
spec:
  parentRefs:
  - name: k8s
    namespace: istio-gateway
    sectionName: lab-https-termination
 
  hostnames:
  - "hubble.lab.k8s.local"
 
  rules:
  - matches:
    - path:
        type: PathPrefix 
        value: /
    backendRefs:
    - name: hubble-ui 
      port: 80
